# coin-flip-dapp

./: .gitignore  README.md
coin-flip-backend/: Anchor.toml  package-lock.json
coin-flip-backend/programs/coin-flip-backend/: Cargo.toml
coin-flip-backend/programs/coin-flip-backend/src/: lib.rs
coin-flip-backend/tests/: coin-flip-backend.ts
coin-flip-frontend/: package-lock.json  package.json
coin-flip-frontend/.next/: app-build-manifest.json  prerender-manifest.json  trace
coin-flip-frontend/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
coin-flip-frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
coin-flip-frontend/.next/server/app/: page.js  page_client-reference-manifest.js
coin-flip-frontend/.next/server/chunks/: [root-of-the-server]__80bb4c51._.js.map  node_modules_next_11760126._.js.map
coin-flip-frontend/.next/static/chunks/: [root-of-the-server]__8ebb6d4b._.css  [root-of-the-server]__8ebb6d4b._.css.map  _1e9fa521._.js  _1e9fa521._.js.map  _7c62bd83._.css  _7c62bd83._.css.map  _98dcfae9._.js  _98dcfae9._.js.map  _9a99b92e._.js  _9a99b92e._.js.map  _a98558ad._.js  _a98558ad._.js.map  _b583c17a._.js  _b583c17a._.js.map  _ca8f3210._.js  _ca8f3210._.js.map  _cb24fed8._.js  _cb24fed8._.js.map  _e327e717._.js  _e327e717._.js.map  _ea8542cc._.js  _ea8542cc._.js.map  node_modules_20707ba3._.js  node_modules_20707ba3._.js.map  (+119 more)
coin-flip-frontend/src/app/: layout.tsx  page.tsx
coin-flip-frontend/src/components/: use-transaction-toast.tsx
coin-flip-frontend/src/lib/: idl.ts  utils.ts
(+173 files in other folders)
